--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Giftastic</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <title>Giftastic</title>
 </head>
+
 <body>
 
-  <form id="gif-form">
-    <label for = "gif-input">Choose an image you want to see</label> 
-    <input type= "text" id="gif-input"><br>
-    <input id="select-gif" type="submit" value="Submit">
-    </form>
-    <div id = "gif-div"></div>
-    <div id = "select-div"></div>
-   
-    <script src="assets/javascript/gif.js"></script>
-    <!-- <button data-animal="cat">meow</button>
+  <div class="buttons"></div>
+
+  <label for="gif-input">Choose your image topic.</label>
+  <input type="text" id="gif-input">
+  <br>
+  <input id="select-gif" type="submit" value="Submit">
+  </form>
+  <div id="gifs-div"></div>
+  
+
+  <script src="assets/javascript/gif.js"></script>
+  <!-- <button data-animal="cat">meow</button>
     <button data-animal="dog">woof</button>
     <button data-animal="bird">chirp</button> -->
-    <div id="gifs-appear-here">
-    
-    <div id="gifs">
-    </div>  -->
-
-    
 </body>
+
 </html>
