--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 <body>
 
   <div class="buttons"></div>
-
-  <label for="gif-input">Choose your image topic.</label>
-  <input type="text" id="gif-input">
-  <br>
-  <input id="select-gif" type="submit" value="Submit">
+  <form>
+    <label for="gif-input">Choose your image topic.</label>
+    <input type="text" id="gif-input">
+    <br>
+    <input id="select-gif" type="submit" value="Submit">
   </form>
   <div id="gifs-div"></div>
-  
+
+
 
   <script src="assets/javascript/gif.js"></script>
   <!-- <button data-animal="cat">meow</button>
